--- a/stylevideo.css
+++ b/stylevideo.css
@@ -108,7 +108,7 @@
 
 .progress-fill {
   display: block; /* garante que é bloco */
-  background: #4ade80;
+  background: #a78bfa;
   height: 100%;
   width: 0%;
   border-radius: 2px;
