--- a/stylevideo.css
+++ b/stylevideo.css
@@ -97,7 +97,7 @@
   padding: 10px 0;  /* espaço em cima e embaixo */
 }
 
-.progress-bar {
+.progress-barvi {
   background: #f0f0f0;
   height: 4px;
   border-radius: 2px;
