--- a/components.css
+++ b/components.css
@@ -83,7 +83,7 @@
    ================================================ */
 
 .iframe {
-  width: 100%;
+  width: 600px;
   height: 600px;
-  border: none;
+
 }
